fixed spacing in header

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,16 @@
     box-sizing: border-box;
 }
 
+/* hover styling */
+a:hover {
+    color: #98C1D9;
+    font-weight: 600;
+}
+
+.icon:hover {
+    border: 4px solid #293241;
+}
+
 /* entire page styling */
 body {
     font-size: 1.25rem;
@@ -44,10 +54,8 @@ nav .contact-me {
 /* header */
 header {
     display: flex;
-    width: 100vw;
-    padding-bottom: 4rem;
-    padding-left: 4rem;
-    padding-top: 4rem;
+    justify-content: space-between;
+    padding: 4rem;
 }
 
 .header-text {
@@ -55,9 +63,6 @@ header {
 }
 
 .header-image {
-    width: auto;
-    height: auto;
-    border-radius: 50%;
     padding: 3rem;
     align-items: center;
     align-content: center;
@@ -142,6 +147,8 @@ header h2 {
     width: 50%;
     background-color: #98C1D9;
     border: 2rem solid #98c1D9;
+    padding: 2rem 2rem;
+    text-align: center;
 }
 
 .about-image img {
@@ -181,7 +188,7 @@ header h2 {
 
 /* footer */
 footer {
-    padding: 3rem 2rem;
+    padding: 2.5rem 2rem;
     display: flex;
     justify-content: space-between;
 }
